k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shifa-backend
spec:
  selector:
    app: shifa-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
